Work still in progress Fixed behaviour of preset menus Investigated (but didn't fix) issue in badegs pyramid display - element visiblity doesn't change as it should

--- a/motivators/badges/styles.css
+++ b/motivators/badges/styles.css
@@ -24,6 +24,10 @@ img.ludi-badge.ludi-new img {
     text-align: center;
 }
 
+.ludi-pyramid-container [id^=calque]:not(#calque00),
+    visibility: hidden;
+}
+
 /*.ludi-course-badges figure {
     display: inline-block;
     vertical-align: top;
